maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:4: error: value random2 is not a member of object Math
  var t = Math.random2()
               ^RandomMouseMaze:10: error: value random2 is not a member of object Math
    r=random3();t=Math.random2()
                       ^